# trying_graph_rag

./: .gitignore  README.md  default_rag.py  dev_distractor_pred.json  graph_rag.py  pyproject.toml  sampled_test_data.json
dataset/: dev_distractor_pred.json  graph_rag_prediction_formatted.json  sampled_gold_data.json
graph_rag/: querying.py
graph_rag/prompts/: entities_and_relationships_extraction.txt
notebooks/: hotpotqa.ipynb  test_format_communities.ipynb  try_hierarchical_leiden.ipynb  try_ollama_entities_extraction.ipynb
scripts/: batch_index.py  batch_query.py  hotpot_evaluate_v1.py  sample_create_index.py  sample_query_index.py
trying_graph_rag/: metric.py  utils.py
trying_graph_rag/default_rag/: default_rag.py  metric.py
trying_graph_rag/graph_rag/: indexing.py  querying.py  types.py
trying_graph_rag/graph_rag/prompts/: community_report.txt  entities_and_relationships_extraction.txt  map.txt  reduce.txt
trying_graph_rag/legacy/: graph_rag.py  graph_rag_ollama.py  run.py
