[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trying_graph_rag"
version = "0.1.0"
dependencies = [
    "transformers",
    "faiss-cpu",
    "torch",
    "huggingface-hub",
    "ijson",
    "ipykernel",
    "pydantic",
    "ollama",
    "sentence-transformers",
    "networkx",
    "graspologic",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I"]