[tool.poetry]
name = "trying_graph_rag"
version = "0.1.0"
description = "trying graph rag"
authors = ["Satoshi Kashima <6world4trigger@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "^4.46.1"
faiss-cpu = "^1.9.0"
torch = "^2.5.1"
ijson = "^3.3.0"
ipykernel = "^6.29.5"
pydantic = "^2.9.2"
ollama = "^0.3.3"
sentence-transformers = "^3.2.1"
networkx = "^3.4.2"
graspologic = "^3.4.1"
fire = "^0.7.0"
future = "^1.0.0"
pyjson5 = "^1.6.7"
tqdm = "^4.66.6"
numba = "^0.60.0"
timeout-decorator = "^0.5.0"

[tool.poetry.group.dev.dependencies]
huggingface-hub = "^0.26.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I"]